fixing view on mobile phone devices

--- a/public/stylesheets/elements.css
+++ b/public/stylesheets/elements.css
@@ -142,7 +142,7 @@
     height: 0;
     margin: 5% auto;
   }
-  @media all and (max-width: 769px) {
+  /*@media all and (max-width: 769px) {
     h1,
     .h1 {
       font-size: 24px;
@@ -152,6 +152,49 @@
     .h2 {
       font-size: 22px;
       line-height: 22px;
+      position: relative;
+    }
+    h3,
+    .h3 {
+      font-size: 20px;
+      line-height: 20px;
+    }
+    h4,
+    .h4 {
+      font-size: 18px;
+      line-height: 18px;
+    }
+    h5,
+    .h5 {
+      font-size: 16px;
+      line-height: 16px;
+    }
+    h6,
+    .h6 {
+      font-size: 14px;
+      line-height: 14px;
+    }
+    p,
+    span,
+    div {
+      font-size: 12px;
+    }
+  }*/
+
+  @media only screen and (max-width: 769px) {
+     h1,
+    .h1 {
+      top: -15vh;
+      font-size: 24px;
+      line-height: 24px;
+      position: relative;
+    }
+    h2,
+    .h2 {
+      top: -15vh;
+      font-size: 22px;
+      line-height: 22px;
+      position: relative;
     }
     h3,
     .h3 {
